// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography variant "bodyA" renders correctly 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
}

<p
    class="emotion-0 emotion-1"
  >
    bodyA
  </p>
</DocumentFragment>
`;

exports[`Typography variant "bodyA" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-1.emotion-1 {
  width: 100px;
  max-width: 650px;
}

<p
    class="emotion-0 emotion-1"
    text="This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </p>
</DocumentFragment>
`;

exports[`Typography variant "bodyB" renders correctly 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #b2b6c3;
  font-size: 14px;
  line-height: 18px;
}

<p
    class="emotion-0 emotion-1"
  >
    bodyB
  </p>
</DocumentFragment>
`;

exports[`Typography variant "bodyB" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #b2b6c3;
  font-size: 14px;
  line-height: 18px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-1.emotion-1 {
  width: 100px;
  max-width: 650px;
}

<p
    class="emotion-0 emotion-1"
    text="This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </p>
</DocumentFragment>
`;

exports[`Typography variant "bodyC" renders correctly 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 22px;
}

<p
    class="emotion-0 emotion-1"
  >
    bodyC
  </p>
</DocumentFragment>
`;

exports[`Typography variant "bodyC" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 22px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-1.emotion-1 {
  width: 100px;
  max-width: 650px;
}

<p
    class="emotion-0 emotion-1"
    text="This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </p>
</DocumentFragment>
`;

exports[`Typography variant "bodyD" renders correctly 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 20px;
}

<p
    class="emotion-0 emotion-1"
  >
    bodyD
  </p>
</DocumentFragment>
`;

exports[`Typography variant "bodyD" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 20px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-1.emotion-1 {
  width: 100px;
  max-width: 650px;
}

<p
    class="emotion-0 emotion-1"
    text="This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </p>
</DocumentFragment>
`;

exports[`Typography variant "command" renders correctly 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  font-family: 'Lucida Console',Monaco,'Courier New',Courier,monospace;
  font-size: 13px;
  font-weight: 500;
  border-radius: 4px;
  color: #4a4f62;
  background-color: #f6f5f7;
  padding: 3px 5px;
}

<code
    class="emotion-0 emotion-1"
  >
    command
  </code>
</DocumentFragment>
`;

exports[`Typography variant "command" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  font-family: 'Lucida Console',Monaco,'Courier New',Courier,monospace;
  font-size: 13px;
  font-weight: 500;
  border-radius: 4px;
  color: #4a4f62;
  background-color: #f6f5f7;
  padding: 3px 5px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-1.emotion-1 {
  width: 100px;
  max-width: 650px;
}

<code
    class="emotion-0 emotion-1"
    text="This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </code>
</DocumentFragment>
`;

exports[`Typography variant "default" renders correctly 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
}

<div
    class="emotion-0 emotion-1"
  >
    default
  </div>
</DocumentFragment>
`;

exports[`Typography variant "default" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-1.emotion-1 {
  width: 100px;
  max-width: 650px;
}

<div
    class="emotion-0 emotion-1"
    text="This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </div>
</DocumentFragment>
`;

exports[`Typography variant "description" renders correctly 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 16px;
  line-height: 24px;
  font-weight: 500;
}

<p
    class="emotion-0 emotion-1"
  >
    description
  </p>
</DocumentFragment>
`;

exports[`Typography variant "description" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 16px;
  line-height: 24px;
  font-weight: 500;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-1.emotion-1 {
  width: 100px;
  max-width: 650px;
}

<p
    class="emotion-0 emotion-1"
    text="This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </p>
</DocumentFragment>
`;

exports[`Typography variant "hero" renders correctly 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 35px;
  line-height: 41px;
  margin-bottom: 72px;
}

<h1
    class="emotion-0 emotion-1"
  >
    hero
  </h1>
</DocumentFragment>
`;

exports[`Typography variant "hero" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 35px;
  line-height: 41px;
  margin-bottom: 72px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-1.emotion-1 {
  width: 100px;
  max-width: 650px;
}

<h1
    class="emotion-0 emotion-1"
    text="This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </h1>
</DocumentFragment>
`;

exports[`Typography variant "lead" renders correctly 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
}

<h2
    class="emotion-0 emotion-1"
  >
    lead
  </h2>
</DocumentFragment>
`;

exports[`Typography variant "lead" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-1.emotion-1 {
  width: 100px;
  max-width: 650px;
}

<h2
    class="emotion-0 emotion-1"
    text="This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </h2>
</DocumentFragment>
`;

exports[`Typography variant "lead-block" renders correctly 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
  margin-bottom: 16px;
  margin-top: 48px;
}

<h2
    class="emotion-0 emotion-1"
  >
    lead-block
  </h2>
</DocumentFragment>
`;

exports[`Typography variant "lead-block" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
  margin-bottom: 16px;
  margin-top: 48px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-1.emotion-1 {
  width: 100px;
  max-width: 650px;
}

<h2
    class="emotion-0 emotion-1"
    text="This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </h2>
</DocumentFragment>
`;

exports[`Typography variant "lead-text" renders correctly 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
  margin-bottom: 24px;
}

<h2
    class="emotion-0 emotion-1"
  >
    lead-text
  </h2>
</DocumentFragment>
`;

exports[`Typography variant "lead-text" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
  margin-bottom: 24px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-1.emotion-1 {
  width: 100px;
  max-width: 650px;
}

<h2
    class="emotion-0 emotion-1"
    text="This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </h2>
</DocumentFragment>
`;

exports[`Typography variant "link" renders correctly 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #3f6ed8;
}

.emotion-1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
    class="emotion-0 emotion-1"
  >
    link
  </div>
</DocumentFragment>
`;

exports[`Typography variant "link" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #3f6ed8;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-1.emotion-1 {
  width: 100px;
  max-width: 650px;
}

.emotion-1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
    class="emotion-0 emotion-1"
    text="This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </div>
</DocumentFragment>
`;

exports[`Typography variant "samplecode" renders correctly 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  background-color: #f6f5f7;
  color: #4a4f62;
  font-size: 12px;
  line-height: 16px;
  padding: 4px;
}

<code
    class="emotion-0 emotion-1"
  >
    samplecode
  </code>
</DocumentFragment>
`;

exports[`Typography variant "samplecode" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  background-color: #f6f5f7;
  color: #4a4f62;
  font-size: 12px;
  line-height: 16px;
  padding: 4px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-1.emotion-1 {
  width: 100px;
  max-width: 650px;
}

<code
    class="emotion-0 emotion-1"
    text="This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </code>
</DocumentFragment>
`;

exports[`Typography variant "tiny" renders correctly 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #b2b6c3;
  font-size: 12px;
  line-height: 16px;
}

<small
    class="emotion-0 emotion-1"
  >
    tiny
  </small>
</DocumentFragment>
`;

exports[`Typography variant "tiny" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #b2b6c3;
  font-size: 12px;
  line-height: 16px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-1.emotion-1 {
  width: 100px;
  max-width: 650px;
}

<small
    class="emotion-0 emotion-1"
    text="This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </small>
</DocumentFragment>
`;

exports[`Typography variant "title" renders correctly 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 21px;
  line-height: 24px;
}

<h3
    class="emotion-0 emotion-1"
  >
    title
  </h3>
</DocumentFragment>
`;

exports[`Typography variant "title" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 21px;
  line-height: 24px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-1.emotion-1 {
  width: 100px;
  max-width: 650px;
}

<h3
    class="emotion-0 emotion-1"
    text="This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </h3>
</DocumentFragment>
`;

exports[`Typography with maxLines renders correctly 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #b2b6c3;
  font-size: 14px;
  line-height: 18px;
  -webkit-line-clamp: 2;
  overflow: hidden;
  -webkit-display: -webkit-box;
  display: -webkit-box;
  -webkit-box-orient: vertical;
}

<p
    class="emotion-0 emotion-1"
  >
    Hello
  </p>
</DocumentFragment>
`;

exports[`Typography with multiple nested chidldren renders correctly 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #b2b6c3;
  font-size: 14px;
  line-height: 18px;
  -webkit-line-clamp: 2;
  overflow: hidden;
  -webkit-display: -webkit-box;
  display: -webkit-box;
  -webkit-box-orient: vertical;
}

.emotion-3 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 21px;
  line-height: 24px;
}

<p
    class="emotion-0 emotion-1"
  >
    Lorem
    <span>
      Ipsum
    </span>
    <span
      class="emotion-0 emotion-3"
    >
      <span>
        Dolor
      </span>
    </span>
    Sit
  </p>
</DocumentFragment>
`;
